[tool.poetry]
name = "vlm-vs"
version = "0.1.0"
description = ""
authors = ["--replace-all <jacketgardensio@gmail.com>"]
readme = "README.md"
packages = [{include = "vlm_vs"}]

[tool.poetry.dependencies]
python = "^3.9.16"
torch = {version = "1.13.1+cu117", source = "pytorch-cu117"}
torchvision = {version = "0.14.1+cu117", source = "pytorch-cu117"}
torchaudio = {version = "0.13.1", source = "pytorch-cu117"}
ftfy = "^6.1.1"
deepspeed = {git = "https://github.com/microsoft/DeepSpeed.git", rev = "jeffra/engine-xthru-v2"}
xformers = "0.0.16"
triton = "^2.0.0.post1"
sentencepiece = "^0.1.99"
fairseq = "0.12.2"
infinibatch = {git = "https://github.com/microsoft/infinibatch.git", rev = "v0.1.0"}
torchscale = "0.2.0"
open-clip-torch = "2.20.0"
rpds-py = "0.8.12"
opencv-python = "^4.8.0.74"
pycocotools = "^2.0.6"
matplotlib = "^3.7.2"
onnxruntime = "^1.15.1"
onnx = "^1.14.0"
ipykernel = "^6.24.0"
transformers = "^4.30.2"
addict = "^2.4.0"
yapf = "^0.40.1"
timm = "0.4.12"
loguru = "^0.7.0"
tqdm = "^4.65.0"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
tensorboard = "^2.13.0"
seaborn = "^0.12.2"
scienceplots = "^2.1.0"
einops = "^0.6.1"
gradio = "^3.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"